FIXED CHATINPUT OVERLAPPING CONTAINER

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,4 @@
 .body {
-  border: red dotted 5px;
+  height: 100vh;
+  width: 100%;
 }
